--- a/logistics_regression.ipynb
+++ b/logistics_regression.ipynb
@@ -4283,8 +4283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df['final_table_pain_rating'].mean()\n",
-    "df.to_csv('logistics_data.csv')"
+    "#df.to_csv('logistics_data.csv')"
    ]
   },
   {
@@ -4376,282 +4375,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Jersey</th>\n",
-       "      <th>total_ima</th>\n",
-       "      <th>ima_high_avg</th>\n",
-       "      <th>ima_high_total</th>\n",
-       "      <th>ima_medium_total</th>\n",
-       "      <th>ima_low_total</th>\n",
-       "      <th>ima_per_min</th>\n",
-       "      <th>ima_accel_high</th>\n",
-       "      <th>ima_acel_medium</th>\n",
-       "      <th>ima_acel_low</th>\n",
-       "      <th>...</th>\n",
-       "      <th>diagnosis_summary_Right Anterior Shoulder SGSX Subacromial impingement</th>\n",
-       "      <th>diagnosis_summary_Right Anterior Shoulder SJAX Acromioclavicular joint sprain</th>\n",
-       "      <th>diagnosis_summary_Right Anterior Thigh THMQ Quadriceps muscle haematoma</th>\n",
-       "      <th>diagnosis_summary_Right Anterior Thigh THXX Thigh Soft Tissue Bruising/ Haematoma</th>\n",
-       "      <th>diagnosis_summary_Right Knee KJMX MCL injury knee, Right Knee KTPX Patellar Tendon Injury</th>\n",
-       "      <th>diagnosis_summary_Right Knee KTPT Patellar tendinopathy ( excl. Sinding Larsen Johannson syndrome see JTKP)</th>\n",
-       "      <th>diagnosis_summary_Right Knee KTQT Quadriceps tendinopathy</th>\n",
-       "      <th>diagnosis_summary_Right Knee KTQX Quadriceps tendon injury</th>\n",
-       "      <th>diagnosis_summary_Right Posterior Thigh TMHX Hamstring strain</th>\n",
-       "      <th>diagnosis_summary_Rt wrist sprain</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>713.0</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>136.0</td>\n",
-       "      <td>504.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>420.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>336.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>436.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>327.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1070.0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>207.0</td>\n",
-       "      <td>765.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1027.0</td>\n",
-       "      <td>83.0</td>\n",
-       "      <td>83.0</td>\n",
-       "      <td>177.0</td>\n",
-       "      <td>767.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 218 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Jersey  total_ima  ima_high_avg  ima_high_total  ima_medium_total  \\\n",
-       "0     4.0      713.0          73.0            73.0             136.0   \n",
-       "1     4.0      420.0          20.0            20.0              64.0   \n",
-       "2     4.0      436.0          30.0            30.0              79.0   \n",
-       "3     4.0     1070.0          98.0            98.0             207.0   \n",
-       "4     4.0     1027.0          83.0            83.0             177.0   \n",
-       "\n",
-       "   ima_low_total  ima_per_min  ima_accel_high  ima_acel_medium  ima_acel_low  \\\n",
-       "0          504.0         10.0            13.0             21.0          70.0   \n",
-       "1          336.0          6.0             2.0              2.0          52.0   \n",
-       "2          327.0          6.0            13.0             13.0          65.0   \n",
-       "3          765.0          7.0            14.0             22.0          66.0   \n",
-       "4          767.0          9.0            18.0             27.0          66.0   \n",
-       "\n",
-       "                 ...                  \\\n",
-       "0                ...                   \n",
-       "1                ...                   \n",
-       "2                ...                   \n",
-       "3                ...                   \n",
-       "4                ...                   \n",
-       "\n",
-       "   diagnosis_summary_Right Anterior Shoulder SGSX Subacromial impingement  \\\n",
-       "0                                                  0                        \n",
-       "1                                                  0                        \n",
-       "2                                                  0                        \n",
-       "3                                                  0                        \n",
-       "4                                                  0                        \n",
-       "\n",
-       "   diagnosis_summary_Right Anterior Shoulder SJAX Acromioclavicular joint sprain  \\\n",
-       "0                                                  0                               \n",
-       "1                                                  0                               \n",
-       "2                                                  0                               \n",
-       "3                                                  0                               \n",
-       "4                                                  0                               \n",
-       "\n",
-       "   diagnosis_summary_Right Anterior Thigh THMQ Quadriceps muscle haematoma  \\\n",
-       "0                                                  0                         \n",
-       "1                                                  0                         \n",
-       "2                                                  0                         \n",
-       "3                                                  0                         \n",
-       "4                                                  0                         \n",
-       "\n",
-       "   diagnosis_summary_Right Anterior Thigh THXX Thigh Soft Tissue Bruising/ Haematoma  \\\n",
-       "0                                                  0                                   \n",
-       "1                                                  0                                   \n",
-       "2                                                  0                                   \n",
-       "3                                                  0                                   \n",
-       "4                                                  0                                   \n",
-       "\n",
-       "   diagnosis_summary_Right Knee KJMX MCL injury knee, Right Knee KTPX Patellar Tendon Injury  \\\n",
-       "0                                                  0                                           \n",
-       "1                                                  0                                           \n",
-       "2                                                  0                                           \n",
-       "3                                                  0                                           \n",
-       "4                                                  0                                           \n",
-       "\n",
-       "   diagnosis_summary_Right Knee KTPT Patellar tendinopathy ( excl. Sinding Larsen Johannson syndrome see JTKP)  \\\n",
-       "0                                                  0                                                             \n",
-       "1                                                  0                                                             \n",
-       "2                                                  0                                                             \n",
-       "3                                                  0                                                             \n",
-       "4                                                  0                                                             \n",
-       "\n",
-       "   diagnosis_summary_Right Knee KTQT Quadriceps tendinopathy  \\\n",
-       "0                                                  0           \n",
-       "1                                                  0           \n",
-       "2                                                  0           \n",
-       "3                                                  0           \n",
-       "4                                                  0           \n",
-       "\n",
-       "   diagnosis_summary_Right Knee KTQX Quadriceps tendon injury  \\\n",
-       "0                                                  0            \n",
-       "1                                                  0            \n",
-       "2                                                  0            \n",
-       "3                                                  0            \n",
-       "4                                                  0            \n",
-       "\n",
-       "   diagnosis_summary_Right Posterior Thigh TMHX Hamstring strain  \\\n",
-       "0                                                  0               \n",
-       "1                                                  0               \n",
-       "2                                                  0               \n",
-       "3                                                  0               \n",
-       "4                                                  0               \n",
-       "\n",
-       "   diagnosis_summary_Rt wrist sprain  \n",
-       "0                                  0  \n",
-       "1                                  0  \n",
-       "2                                  0  \n",
-       "3                                  0  \n",
-       "4                                  0  \n",
-       "\n",
-       "[5 rows x 218 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "binary_df = pd.get_dummies(df)\n",
-    "binary_df.head()"
+    "binary_df.head()\n",
+    "binary_df.to_csv(\"binary_logistics_data.csv\")"
    ]
   },
   {
