--- a/random_tree.ipynb
+++ b/random_tree.ipynb
@@ -4242,6 +4242,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#df.to_csv(\"binary_logistics_condensed.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "collapsed": true
